vpc-with-public-and-private-subnets.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Metadata": {
		"Description": [
			"This template creates a VPC with dedicated tenancy, a Private Subnet, and a Public Subnet.  It creates ",
			"the corresponding Route Tables, InternetGateway, and Managed NAT Gateway.  It also adds the appropriate ",
			"routes.  Finally, it creates a Windows Bastion Host.",
			"Questions/Issues",
			"1.  Do the private and public subnets need to be in the same AZ?",
			"2.  Consider a mapping for the Bastion Host AMI.",
			"3.  Consider creating multiple private subnets."],
		"AWS::CloudFormation::Designer": {
			"87ee9a77-e3fd-4273-bb7e-1716acd729f9": {
				"size": {
					"width": 810,
					"height": 400
				},
				"position": {
					"x": 120,
					"y": 30
				},
				"z": 0,
				"embeds": [
					"b5284782-0737-4977-8ee2-bbfd62a5f0f0",
					"3c844ae6-e93f-4772-863b-0b5deecc749c",
					"ae66b180-c715-4a02-be49-9bf2dfe49352"
				]
			},
			"ae66b180-c715-4a02-be49-9bf2dfe49352": {
				"size": {
					"width": 180,
					"height": 170
				},
				"position": {
					"x": 390,
					"y": 160
				},
				"z": 1,
				"parent": "87ee9a77-e3fd-4273-bb7e-1716acd729f9",
				"embeds": []
			},
			"3c844ae6-e93f-4772-863b-0b5deecc749c": {
				"size": {
					"width": 140,
					"height": 85
				},
				"position": {
					"x": 420,
					"y": 130
				},
				"z": 1,
				"parent": "87ee9a77-e3fd-4273-bb7e-1716acd729f9",
				"embeds": []
			},
			"b5284782-0737-4977-8ee2-bbfd62a5f0f0": {
				"size": {
					"width": 60,
					"height": 60
				},
				"position": {
					"x": 190,
					"y": 140
				},
				"z": 1,
				"parent": "87ee9a77-e3fd-4273-bb7e-1716acd729f9",
				"embeds": []
			}
		}
	},
	"Parameters": {
		"bastionHostKeyPair": {
			"Description": "Amazon EC2 Key Pair to be used for the Bastion Host",
			"Type": "AWS::EC2::KeyPair::KeyName",
			"Default": "other-demo"
		},
		"bastionHostImageId": {
			"Description": "AMI to be used for the Bastion Host",
			"Type": "AWS::EC2::Image::Id",
			"Default": "ami-df8767bf"
		}
	},
	"Mappings": {
		"SubnetConfig": {
			"VPC": {
				"CIDR": "10.101.0.0/16"
			},
			"Public": {
				"CIDR": "10.101.1.0/24"
			},
			"Private": {
				"CIDR": "10.101.64.0/18"
			}
		}
	},
	"Resources": {
		"dedicatedVPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": {
					"Fn::FindInMap": ["SubnetConfig", "VPC", "CIDR"]
				},
				"InstanceTenancy": "dedicated"
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "87ee9a77-e3fd-4273-bb7e-1716acd729f9"
				}
			}
		},
		"pubSubnet": {
			"DependsOn": ["dedicatedVPC"],
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "dedicatedVPC"
				},
				"MapPublicIpOnLaunch": false,
				"CidrBlock": {
					"Fn::FindInMap": ["SubnetConfig", "Public", "CIDR"]
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "ae66b180-c715-4a02-be49-9bf2dfe49352"
				}
			}
		},
		"privSubnet": {
			"DependsOn": ["dedicatedVPC"],
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "dedicatedVPC"
				},
				"MapPublicIpOnLaunch": false,
				"CidrBlock": {
					"Fn::FindInMap": ["SubnetConfig", "Private", "CIDR"]
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "3c844ae6-e93f-4772-863b-0b5deecc749c"
				}
			}
		},
		"privRouteTable": {
			"DependsOn": ["dedicatedVPC"],
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "dedicatedVPC"
				}
			}
		},
		"privSubnetRouteTableAssociation": {
			"DependsOn": ["privSubnet", "privRouteTable"],
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "privSubnet"
				},
				"RouteTableId": {
					"Ref": "privRouteTable"
				}
			}
		},
		"igw": {
			"DependsOn": ["pubSubnet"],
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "b5284782-0737-4977-8ee2-bbfd62a5f0f0"
				}
			}
		},
		"pubRouteTable": {
			"DependsOn": ["dedicatedVPC"],
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "dedicatedVPC"
				}
			}
		},
		"attachIGW": {
			"DependsOn": ["dedicatedVPC", "igw", "pubRouteTable"],
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "dedicatedVPC"
				},
				"InternetGatewayId": {
					"Ref": "igw"
				}
			}
		},
		"pubRoute": {
			"DependsOn": ["pubRouteTable", "attachIGW"],
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "pubRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "igw"
				}
			}
		},
		"pubSubnetRouteTableAssociation": {
			"DependsOn": ["pubSubnet", "pubRouteTable"],
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "pubSubnet"
				},
				"RouteTableId": {
					"Ref": "pubRouteTable"
				}
			}
		},
		"managedNGWIP": {
			"DependsOn": ["privSubnet", "attachIGW", "privSubnetRouteTableAssociation"],
			"Type": "AWS::EC2::EIP",
			"Properties": {
				"Domain": "vpc"
			}
		},
		"managedNGW": {
			"DependsOn": ["managedNGWIP", "privSubnetRouteTableAssociation", "pubSubnetRouteTableAssociation"],
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": ["managedNGWIP", "AllocationId"]
				},
				"SubnetId": {
					"Ref": "pubSubnet"
				}
			}
		},
		"ngwRoute": {
			"DependsOn": ["privRouteTable", "managedNGW"],
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "privRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "managedNGW"
				}
			}
		},
		"bastionHostSG": {
			"DependsOn": "dedicatedVPC",
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Bastion Host SG - allow RDP in and all out",
				"VpcId": {
					"Ref": "dedicatedVPC"
				},
				"SecurityGroupIngress": [{
					"IpProtocol": "tcp",
					"FromPort": "3389",
					"ToPort": "3389",
					"CidrIp": "0.0.0.0/0"
		         }],
				"SecurityGroupEgress": [{
					"IpProtocol": "-1",
					"FromPort": "0",
					"ToPort": "0",
					"CidrIp": "0.0.0.0/0"
				}]
			}
		},
		"bastionHost": {
			"DependsOn": ["attachIGW", "ngwRoute"],
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"ImageId": {
					"Ref": "bastionHostImageId"
				},
				"KeyName": {
					"Ref": "bastionHostKeyPair"
				},
				"InstanceType": "m3.medium",
				"AvailabilityZone": {
					"Fn::GetAtt": ["pubSubnet", "AvailabilityZone"]
				},
				"NetworkInterfaces": [{
					"DeviceIndex": "0",
					"AssociatePublicIpAddress": true,
					"GroupSet": [{
						"Fn::GetAtt": ["bastionHostSG", "GroupId"]
					}],
					"SubnetId": {
						"Ref": "pubSubnet"
					}
					}]
			}
		},
		"bastionHostPrivateENI": {
			"DependsOn": ["privSubnet", "bastionHost"],
			"Type": "AWS::EC2::NetworkInterface",
			"Properties": {
				"Description": "Private subnet ENI for bastion host",
				"GroupSet": [{
					"Fn::GetAtt": ["bastionHostSG", "GroupId"]
				}],
				"SubnetId": {
					"Ref": "privSubnet"
				}
			}
		},
		"attachPrivateENI": {
			"DependsOn": "bastionHost",
			"Type": "AWS::EC2::NetworkInterfaceAttachment",
			"Properties": {
				"InstanceId": {
					"Ref": "bastionHost"
				},
				"NetworkInterfaceId": {
					"Ref": "bastionHostPrivateENI"
				},
				"DeviceIndex": "1"
			}
		}
	},
	"Outputs": {
		"dedicatedVPC": {
			"Description": "ID for new dedicated VPC",
			"Value": {
				"Ref": "dedicatedVPC"
			}
		},
		"dedicatedVPCCIDR": {
			"Description": "CIDR Block for new dedicated VPC",
			"Value": {
				"Fn::GetAtt": ["dedicatedVPC", "CidrBlock"]
			}
		},
		"publicSubnet": {
			"Description": "ID for new public subnet",
			"Value": {
				"Ref": "pubSubnet"
			}
		},
		"privateSubnet": {
			"Description": "ID for new private subnet",
			"Value": {
				"Ref": "privSubnet"
			}
		},
		"natGateway": {
			"Description": "ID for new Managed NAT Gateway",
			"Value": {
				"Ref": "managedNGW"
			}
		},
		"natGatewayIP": {
			"Description": "Public IP assigned to new Managed NAT Gateway",
			"Value": {
				"Ref": "managedNGWIP"
			}
		},
		"bastionHostPubIP": {
			"Description": "Public IP address assigned to new Bastion Host",
			"Value": {
				"Fn::GetAtt": ["bastionHost", "PublicIp"]
			}
		}
	}
}
